Fix display overflow

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
 
 :root {
-    --container-height: 852px;
-    --container-width: 393px;
+    --container-height: 812px;
+    --container-width: 375px;
 
     --white: #FBFBFD;
     --orange: #FF9500;
@@ -43,7 +43,7 @@ body.dark-mode {
     background-color: var(--darkMode);
 }
 
-/* sized for iphone14 pro */
+/* sized for iphoneX */
 .container {
     position: absolute;
     width: var(--container-width);
@@ -61,17 +61,6 @@ body.dark-mode .container {
 
 body.light-mode .container {
     background-color: var(--lightMode);
-}
-
-.display {
-    text-align: end;
-    overflow: hidden;
-    height: 100%;
-    width: 100%;
-
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    align-items: flex-end;
 }
 
 .equation {
@@ -98,28 +87,65 @@ body.light-mode .result {
     color: var(--darkGrey);
 }
 
+.display {
+    text-align: end;
+    overflow: hidden;
+    /* height: 268px; */
+    height: 100%;
+    width: 100%;
+    gap: 10px;
+
+    display: grid;
+    grid-template-rows: auto min-content;
+    align-items: flex-end;
+
+    /* overflow: hidden; */
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    justify-items: end;
+}
+
+.history-item .result,
+.history-item .equation,
+.output .result,
+.output .equation {
+    overflow-x: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.history {
+    display: grid;
+    grid-template-rows: auto auto auto;
+    width: 80%;
+    justify-content: end;
+}
+
 .history-item {
     font-size: 1rem;
+    overflow: hidden;
 }
 
 .output .equation {
     font-size: 1.5rem;
-    overflow: inherit;
 }
 
 .output .result {
     font-size: 3rem;
-    overflow: hidden;
 }
 
 .output {
-    margin-top: 2rem;
+    height: 100%;
+    display: grid;
+    grid-template-rows: auto auto;
+    justify-content: end;
 }
 
 .container {
     display: grid;
     grid-template-rows: 0 auto max-content;
     align-items: flex-end;
+    justify-items: end;
 }
 
 .keypad {
@@ -128,7 +154,7 @@ body.light-mode .result {
     gap: 20px;
     justify-content: center;
     align-items: flex-end;
-    margin-top: 20px;
+    margin: 20px auto 0 auto;
 }
 
 .row {
@@ -303,7 +329,7 @@ footer {
     transition: 0.5s ease-in-out;
 }
 
-@media (max-height: 852px) {
+@media (max-height: 812px) {
     footer {
         display: none;
     }
